update prisma schema and dormitorys
