# src/routes/rooms.routes.js
@@ -1,13 +1,15 @@
 const express = require('express');
 const router = express.Router();
 const roomController = require('../controllers/rooms.controller');
-
+const multer = require("multer");
 // GET
 router.get('/', roomController.getAllRooms);
 router.get('/:id', roomController.getRoomById);
 
 // POST
 router.post('/', roomController.createRoom);
+router.post("/rooms", upload.single("image"), roomController.createRoom);
+
 
 // PUT
 router.put('/:id', roomController.updateRoom);
